# fuck-shit-code

./: Cargo.toml  README.md  README_en.md
.github/workflows/: ci.yml
src/: config.rs  error.rs  main.rs
src/analyzer/: analyzer.rs  mod.rs  result.rs
src/common/: files.rs  language.rs  mod.rs
src/i18n/: en_us.rs  mod.rs  zh_cn.rs
src/metrics/: base.rs  comment_ratio.rs  complexity.rs  duplication.rs  error_handling.rs  function_length.rs  mod.rs  naming.rs  structure.rs
src/parser/: base.rs  c.rs  csharp.rs  css.rs  generic.rs  go.rs  html.rs  java.rs  javascript.rs  mod.rs  php.rs  python.rs  rust.rs  typescript.rs
src/report/: console.rs  markdown.rs  mod.rs
