[package]
name = "fuck-shit-code"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "一个专为挖掘'屎山代码'设计的工具，能无情揭露代码的丑陋真相"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
colored = "2.1"
regex = "1.10"
walkdir = "2.4"
globset = "0.4"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
indicatif = "0.17"
lazy_static = "1.4"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-java = "0.20"
tree-sitter-c = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-c-sharp = "0.20"
tree-sitter-go = "0.20"
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1